# labauto_control_library

./: .gitignore  BaseController.m  BaseFilter.m  CascadeController.m  ControlloreMassaEccentrica.py  DecentralizedController.m  ElasticRoboticSystem.m  FIRFilter.m  FirstOrderLowPassFilter.m  IdentificazioneGiunto1.mlx  IdentificazioneGiunto2.mlx  IdentificazioneParametriDinamici_calcolo_dei_parametri.mlx  IdentificazioneParametriDinamici_calcolo_di_T.mlx  IkMotion.m  LICENSE  MANIFEST.in  MechanicalSystem.m  MotionLaw.m  NotchFilter.m  PIDController.m  PinocchioRoboticSystem.m  README.md  ScaraController.m  TrapezoidalMotionLaw.m  ValidazioneGiunto.m  ValidazioneSpazioLavoro.m  cascade_controller.py  configure_python.m  decentralized_controller.md  decentralized_controller.py  delay.py  example_motion_law.py  fir_filter.md  fir_filter.py  first_order_low_pass_filter.py  generate_random_trj.m  identification_experiment.py  identification_experiments_working_points.py  mechanical_system.py  modello_primo_giunto.mat  (+48 more)
+scara/: controlledJointSimulation.p  fkSimulation.p  inertiaSimulation.p  initialStateSimulation.p  inputToStateSimulation.p  inverseDynamicsNonLinearFcn.p  noiseSimulation.p  stateToOutputSimulation.p  uMaxSimulation.p
+scara0/: config.yaml  control_config.yaml  dataSimulation.m  model.urdf
+scara_ctrl/: fkFcn.m  ikFcn.m  inertiaFcn.m  initialStateSimulation.p  jacobDotFcn.m  jacobFcn.m  regressorFcn.m
+scara_data/: Evaluator.m  compute_dynamic_parameters.m  decagon.code  diamond.code  dynamic_paramers.mat  generate_controller.m  square.code  (+2 more)
(+296 files in other folders)
