[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labauto"
version = "0.1.0"
description = "Controller classes and functions, JRL-CARI"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Manuel Beschi", email = "manuel.beschi@unibs.it" }
]
dependencies = [
  "requests"
]

[tool.setuptools]
packages = ["labauto"]

